--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "camelittle",
   "version": "1.0.0",
   "main": "index.js",
-  "description": "A node wrapper for fswebcam providing configurable async static frame
-grabbing. Inspired by Camelot.",
+  "description": "A node wrapper for fswebcam providing configurable async static frame grabbing. Inspired by Camelot.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
